infrastructure/base/monitoring-prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: "monitoring-k8s.ddns.net"
    http:
      paths:
      - pathType: Prefix
        path: /prometheus(/|$)(.*)
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      - pathType: Prefix
        path: /alertmanager(/|$)(.*)
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
